--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,69 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+.container{
+    background: linear-gradient(135deg, #0E1128, #192042);
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+    && h1{
+        font-size: 60px;
+        color: #fff;
+        animation: flipH1 2s;
+    }
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+@keyframes flipH1 {
+    form{
+        transform: rotateX(90deg);
+    }to{
+        transform: rotateX(0deg);
+    }
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.containerInput{
+    background: linear-gradient(135deg, #7E3FF2, #BA34FF);
+    display: flex;
+    gap: 8px;
+    margin: 30px 0;
+    padding: 15px;
+    border-radius: 8px;
+    box-shadow: 1px 3px 8px rgba(0, 0, 0, 0.5);
+
+    && input{
+        background-color: transparent;
+        border: 0;
+        font-size: 20px;
+        color: #fff;
+        outline: none;
+    }
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+.buttonCep{
+    display: flex;
+    padding: 5px;
+    border: none;
+    border-radius: 8px;
+    background-color: transparent;
+    color: #fff;
+    cursor: pointer;
 }
 
-.card {
-  padding: 2em;
-}
+.containerInfo{
+    background-color: #fff;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 400px;
+    border-radius: 8px;
 
-.read-the-docs {
-  color: #888;
+    && h2{
+        margin: 15px 0;
+        font-size: 30px;
+    }
+    && p{
+        margin-bottom: 15px;
+        font-weight: bold;
+    }
 }
